# dissect

./: .gitignore  CMakeLists.txt  README.md
halve/: CMakeLists.txt  config.h.in  halve.rc  halve.rc.in  qtquickcontrols2.conf  resource.qrc  version.txt
halve/assets/configures/: azimuth.json  bodysurface.json  casket.json  catheter.json  catheter_type.json  hotkey.json  mapping_point_group.json  melt_options.json  notebook.json  notebook_genre.json  pant.json  reseau.json  scalar.json  scalar_color.json  surface_sort.json
halve/assets/model/: body.ply  catheter_node.ply  catheter_pant.json  catheter_pfa18.json  catheter_yp_hd_grid.json
halve/i18n/: en.ts  zh.ts
halve/layout/: default.json
halve/qml/: AboutView.qml  AlarmPane.qml  AlarmPaneView.qml  AlbumImagePage.qml  AlbumPage.qml  AlbumPictureView.qml  AlbumVideoPage.qml  AppSettings.qml  ApparentSwitch.qml  AzimuthBar.qml  BreathChartPane.qml  BreathOptionPane.qml  BreatheView.qml  CalendarViewForm.ui.qml  CasketTable.qml  CasketView.qml  CatheterForm.qml  CatheterMeshView.qml  CatheterRepertoryPage.qml  CatheterRepertoryTable.qml  CatheterTable.qml  CatheterTempletView.qml  CatheterTypeView.qml  CatheterView.qml  ChannelChart.qml  ChannelModeImage.qml  CircleProgress.qml  ColorCarp.qml  ConfirmDialog.qml  ConsultSettingPane.qml  CursorShapePane.qml  DatePicker.qml  DetectionSettingPane.qml  DevelopSettings.qml  DeviceStateLight.qml  DissolveForm.qml  DissolveSettingPane.qml  DissolveTable.qml  DissolveView.qml  DoubleSpinBox.qml  (+90 more)
halve/qml/colorpicker/: ColorPicker.qml
halve/qml/mediaplayer/: AudioControl.qml  CustomRadioButton.qml  ErrorPopup.qml  MediaPlayerView.qml  PlaybackControl.qml  PlaybackRateControl.qml  PlaybackSeekControl.qml
halve/qml/models/: AlarmModel.qml  CatheterElectrodeTypeModel.qml  CatheterPortModel.qml  ChannelModeModel.qml  ElectrodeModel.qml  HighPassModel.qml  KernelSizeModel.qml  LowPassModel.qml  MeltModel.qml  NotebookSortModel.qml  PerceptionModel.qml  PerformStateModel.qml  RespiratorModeModel.qml  SexModel.qml  SignalSourceModel.qml  SpeedModel.qml
halve/src/: CMakeLists.txt  HalveType.h  QmlRegisterTypes.cpp  Translator.cpp  Translator.h  main.cpp
halve/src/album/: AlbumDb.cpp  AlbumDb.h  AlbumExporter.cpp  AlbumExporter.h  AlbumModel.cpp  AlbumModel.h  CMakeLists.txt  Picture.cpp  Picture.h  ScreenRecord.cpp  ScreenRecord.h
halve/src/casket/: CMakeLists.txt  Casket.cpp  Casket.h  CasketCatheterListModel.cpp  CasketCatheterListModel.h  CasketDb.cpp  CasketDb.h  CasketFilterProxyModel.cpp  CasketFilterProxyModel.h  CasketListModel.cpp  CasketListModel.h
halve/src/catheter/: BodySurfaceElectrodeNodeListModel.cpp  BodySurfaceElectrodeNodeListModel.h  CMakeLists.txt  Catheter.cpp  Catheter.h  CatheterCasketFilterProxyModel.cpp  CatheterCasketFilterProxyModel.h  CatheterDb.cpp  CatheterDb.h  CatheterElectrodeNodeListModel.cpp  CatheterElectrodeNodeListModel.h  CatheterElectrodeNodePointDb.cpp  CatheterElectrodeNodePointDb.h  CatheterElectrodeNodePointListModel.cpp  CatheterElectrodeNodePointListModel.h  CatheterListModel.cpp  CatheterListModel.h  CatheterMagnetism.cpp  CatheterMagnetism.h  CatheterMesh.cpp  CatheterMesh.h  CatheterMould.cpp  CatheterMould.h  CatheterNodeFilter.cpp  CatheterNodeFilter.h  CatheterPerception.cpp  CatheterPerception.h  CatheterRepertory.cpp  CatheterRepertory.h  CatheterRepertoryTableModel.cpp  CatheterRepertoryTableModel.h  CatheterSortFilterProxyModel.cpp  CatheterSortFilterProxyModel.h  CatheterStage.cpp  CatheterStage.h  CatheterTableModel.cpp  CatheterTableModel.h  CatheterTemplet.cpp  CatheterTemplet.h  CatheterTempletDb.cpp  (+27 more)
halve/src/channel/: CMakeLists.txt  CalculateWorklet.cu  CalculateWorklet.h  Channel.cpp  Channel.h  ChannelData.h  ChannelDataCalculate.cpp  ChannelDataCalculate.h  ChannelDataDb.cpp  ChannelDataDb.h  ChannelDataFilter.cpp  ChannelDataFilter.h  ChannelDataStorage.h  ChannelHost.cpp  ChannelHost.h  ChannelStorageAdapter.h  ChannelStorageWorket.cpp  ChannelStorageWorket.h  ChannelTrack.h  ChannelTrackData.h  ChannelTrackDataElectricalTableModel.cpp  ChannelTrackDataElectricalTableModel.h  ChannelTrackDataMagneticTableModel.cpp  ChannelTrackDataMagneticTableModel.h  ChannelTrackDb.cpp  ChannelTrackDb.h  ChannelTrackOrm.h  ChannelTrackStorage.h  ChannelTrackStorageAdapter.h  ChannelWatchWindow.cpp  ChannelWatchWindow.h  ChannelWorker.cpp  ChannelWorker.h  MainWindow.ui  channel.rep  channel_table_fields.h
halve/src/combined/: Blend.cpp  Blend.h  BlendDint.cpp  BlendDint.h  BlendMagnetism.cpp  BlendMagnetism.h  Bound.cpp  Bound.h  CMakeLists.txt  CatheterTrack.cpp  CatheterTrack.h  CatheterTrackPackage.cpp  CatheterTrackPackage.h  CheckEnvironmentHelper.h  Combined.cpp  Combined.h  CombinedDb.cpp  CombinedDb.h  CombinedHost.cpp  CombinedHost.h  ConvertTrackData.cpp  Detector.cpp  Detector.h  InspectReproduceCatheter.cpp  NdiStorageAdapter.h  TrackData.cpp  TrackData.h  TrackDataListModel.cpp  TrackDataListModel.h  combined.rep
halve/src/dissolve/: CMakeLists.txt  DissolveDataSource.cpp  DissolveDataSource.h  DissolveDb.cpp  (+13 more)
halve/tests/: CMakeLists.txt  tst_catheter_perception.cpp  tst_dilate_erode.cpp  tst_filterpipe.cpp  tst_melt_survey.cpp  tst_pantompkins.cpp  tst_receiver.cpp  tst_vtkm.cpp  vtkm_worklet.cu  vtkm_worklet.h
ys/: CMakeLists.txt
ys/Algorithm/: Alg.h  AlgVector.h
ys/EcgMethod/: EcgMethod.h  FindMaxAbsDvDt.h  FindMaxAbsPeak.h  FindMaxDvDt.h  FindMaxPeak.h  FindMinDvDt.h  FindMinPeak.h
ys/ElecIdentify/: DynamicNearestNeighbor.cpp  DynamicNearestNeighbor.h  Elec2WorldUpdater.cpp  Elec2WorldUpdater.h  ElecIdentify.cpp  ElecIdentify.h  Matrix3x4d.cpp  Matrix3x4d.h  ScaleFactorGetter.cpp  ScaleFactorGetter.h  main.cpp
ys/HeartRate/: HeartRate.h  HeartRateFilter.h
ys/breath/: Breath.h
ys/filter/: BiDirectionFilterPipe.h  ButterWorth.h  EnumFilterType.h  Filter.h  FilterCoefficients.h  FilterPipe.h  Sec2.h  TimeSeriesFilter.cpp  TimeSeriesFilter.h
ys/iir_filter/: Electric_field_define.h  Electric_field_mapping_algorithm.cpp  Electric_field_mapping_algorithm.h  iir_filter.cpp  iir_filter.h
(+409 files in other folders)
