# CMakeList.txt : CMake project for halve, include source and define
# project specific logic here.
#

set(SRCS
    "Study.h"
    "Study.cpp"
    "Stage.h"
    "Stage.cpp"
    "MouseInteractorStyle.h"
    "MouseInteractorStyle.cpp"
    "vtkIPWCallback.h"
    "vtkIPWCallback.cpp"
    "StageData.h"
    "Orientation.cpp"
    "Orientation.h"
    "CameraInfo.cpp"
    "CameraInfo.h"
    "HardwareSelector.cpp"
    "HardwareSelector.h"
    "StageSettings.cpp"
    "StageSettings.h"
    "StageOptions.cpp"
    "StageOptions.h"
    "StageScalar.cpp"
    "StageScalar.h"
    "DistanceWidget.cpp"
    "DistanceWidget.h"
    "CatheterShowFilter.cpp"
    "CatheterShowFilter.h"
    "StageDetector.cpp"
    "StageAxes.cpp"
    "CatheterShow.h"
    "CatheterShow.cpp"
    "StageCamera.cpp"
    "StageReseau.cpp"
    "StagePoint.cpp"
    "StageSelect.cpp"
    "CatheterTrackWidget.cpp"
    "CatheterTrackWidget.h"
    "CatheterTrackWorker.cpp"
    "CatheterTrackWorker.h"
    "EliminateSource.cpp"
    "EliminateSource.h"
    "MeshColorTransfer.cpp"
    "MeshColorTransfer.h"
    "StageRenderer.cpp"
    "StageRenderer.h"
    "ReseauShowFilter.cpp"
    "ReseauShowFilter.h"
    "HightPointFilter.cpp"
    "HightPointFilter.h"
    "Hotkey.cpp"
    "Hotkey.h"
)
target_sources(halve PRIVATE ${SRCS})
add_subdirectory(scalar)
add_subdirectory(azimuth)
add_subdirectory(alarm)
